# CIPractice

./: .gitignore  CMakeLists.txt  Makefile  README.md  jenkinsfile
Docker/: LogTheThing.bat  Steps.txt  doTheThing.bat  doTheThing.sh  doTheThingGitBash.sh  jenkins  jenkins.pub  letsGetThisTesting.bat
Docker/AgentContainer/: dockerfile
Docker/JenkinsContainer/: dockerfile
include/: Parentheses.h
src/: Parentheses.cpp  ParenthesesTest.cpp
test/: TestCases.ini
